feat: add categories by species
